# LearnOpenGL

./: .gitmodules  CMakeLists.txt
Dependencies/: CMakeLists.txt
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
LearnOpenGL/: CMakeLists.txt  ErrorHandling.h  IndexBuffer.cpp  IndexBuffer.h  LearnOpenGL.cpp  LearnOpenGL.h  ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  imgui.ini
LearnOpenGL/res/shaders/: fragment.shader  vertex.shader
